# onvif_srvd

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile
_unused_/: PTZNode.cpp  PTZNode.h  ServiceContext.cpp  ServiceContext.h  StreamProfile.cpp  StreamProfile.h
cmake/modules/: FindJSONCPP.cmake  FindgSOAP.cmake
data/onvif-srvd/etc/televic/nftables/: 01000_allow-onvif-api.nft
debian/: changelog  control  copyright  onvif-srvd.default  onvif-srvd.dirs  onvif-srvd.install  onvif-srvd.lintian-overrides  onvif-srvd.service  rules
examples/: .#config.json  config.json
src/: cmdline.cpp  cmdline.h  main.cpp  onvif_srvd.cpp  st.h
src/defines/: singletone.h  smacros.h  soap_defines.h  soap_defines_head.h  version.h
src/network/: cethernetdevice.cpp  cethernetdevice.h
src/onvif/entity/: ccameraprofile.cpp  ccameraprofile.h  ccameraptz.cpp  ccameraptz.h  ccameras.cpp  ccameras.h  ccamerastream.cpp  ccamerastream.h
src/onvif/soap/: cdevice.cpp  cdevice.h  cmedia.cpp  cmedia.h  cptz.cpp  cptz.h  csoap.cpp  csoap.h
src/tools/: networking.cpp  networking.h  shell.cpp  shell.h  tools_fs.cpp  tools_fs.h  tools_string.cpp  tools_string.h
src/tools/logger/: clogger.cpp  clogger.h
src/tools/options/: options.cpp  options.h
src/tools/singletone/: csingletone.cpp  csingletone.h
wsdl/: devicemgmt.wsdl
